--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^6.20.0",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
@@ -69,6 +70,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@prisma/client": "^7.3.0",
     "@tailwindcss/postcss": "^4.1.8",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -77,6 +79,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "prisma": "^7.3.0",
     "tailwindcss": "^4.1.11",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.38.0",
