chore: update jsonwebtoken version and add prisma configuration
- downgraded jsonwebtoken from 9.1.2 to 9.0.2 in package.json
- added prisma.config.ts for Prisma configuration
- created schema.prisma with models for User, ProcessedInput, SpeakerProfile, AudioStreamSession, AudioBatch, BatchProcessingResult, and InputProcessingMetrics
- updated docker-compose.yml to use wget for healthcheck
- updated Dockerfiles for backend and frontend to use node:22-alpine and adjusted npm install commands
- added react-router-dom to package-lock.json

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,15 @@ services:
     volumes:
       - weaviate_data:/var/lib/weaviate
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/v1/.well-known/ready"]
+      test:
+        [
+          "CMD",
+          "wget",
+          "--quiet",
+          "--tries=1",
+          "--spider",
+          "http://localhost:8080/v1/.well-known/ready",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
