--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -1,5 +1,5 @@
 # Backend Dockerfile
-FROM node:18-alpine
+FROM node:22-alpine
 
 WORKDIR /app
 
@@ -7,15 +7,24 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci
+RUN npm install
 
-# Copy source code
+# Copy only backend dependencies
+COPY backend/package*.json ./backend/
+RUN cd backend && npm install --production=false
+
+# Copy backend source code
 COPY backend/ ./backend/
 COPY tsconfig.json ./
 
-# Build TypeScript
+# Generate Prisma client
+WORKDIR /app/backend
+RUN DATABASE_URL="postgresql://user:pass@localhost/db" npx prisma generate
+
+# Build backend
 RUN npm run build
 
+WORKDIR /app
 EXPOSE 3000
 
-CMD ["node", "dist/index.js"]
+CMD ["node", "backend/dist/services/api-server.js"]
