chore: update Prisma dependencies and refactor database configuration
- Updated @prisma/client and prisma packages to version 5.18.0.
- Removed prisma.config.ts and integrated configuration directly into schema.prisma.
- Refactored schema.prisma for improved readability and consistency.
- Introduced prisma.ts for managing Prisma client instantiation.
- Updated api-server.ts to use the new prisma.ts for database interactions.
- Added init-db.sql for initializing the database schema.
- Modified Dockerfiles and docker-compose.yml for improved setup and compatibility.
- Updated frontend and backend configurations for better development experience.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./init-db.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U secondbrain"]
       interval: 10s
@@ -27,19 +28,6 @@ services:
       - "8080:8080"
     volumes:
       - weaviate_data:/var/lib/weaviate
-    healthcheck:
-      test:
-        [
-          "CMD",
-          "wget",
-          "--quiet",
-          "--tries=1",
-          "--spider",
-          "http://localhost:8080/v1/.well-known/ready",
-        ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
   backend:
     build:
@@ -56,12 +44,10 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-      weaviate:
-        condition: service_healthy
     volumes:
       - ./backend:/app/backend
       - /app/backend/node_modules
-    command: npm run dev
+    command: npm run backend:dev
 
   frontend:
     build:
@@ -76,7 +62,7 @@ services:
     volumes:
       - ./frontend:/app/frontend
       - /app/frontend/node_modules
-    command: npm run dev
+    command: npm run dev -- --host 0.0.0.0
 
 volumes:
   postgres_data:
