--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -1,19 +1,18 @@
 # Frontend Dockerfile
 FROM node:22-alpine
 
-# Set working directory to frontend folder
-WORKDIR /app/frontend
+WORKDIR /app
 
-# Copy package files from root
-COPY package*.json /app/
+# Copy package files
+COPY package*.json ./
 
 # Install dependencies
-RUN cd /app && npm install
+RUN npm install
 
 # Copy all necessary files
-COPY index.html vite.config.ts tsconfig.json tailwind.config.js components.json /app/
-COPY frontend/ /app/frontend/
-COPY config/ /app/config/
+COPY index.html vite.config.ts tsconfig.json tailwind.config.js components.json ./
+COPY frontend/ ./frontend/
+COPY config/ ./config/
 
 EXPOSE 5173
 
