--- a/backend/package.json
+++ b/backend/package.json
@@ -16,14 +16,16 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.10.6",
+    "@types/multer": "^1.4.11",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^5.18.0",
     "tsx": "^4.7.0",
     "typescript": "~5.7.2"
