--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -1,8 +1,8 @@
 # Backend Dockerfile
 FROM node:22-alpine
 
-# Install OpenSSL for Prisma compatibility
-RUN apk add --no-cache openssl ca-certificates
+# Install OpenSSL, Python, and build tools for Prisma and bcrypt
+RUN apk add --no-cache openssl ca-certificates python3 make g++
 
 WORKDIR /app
 
@@ -16,9 +16,11 @@ RUN npm install
 COPY backend/package*.json ./backend/
 RUN cd backend && npm install --production=false
 
+# Rebuild native modules for Alpine/Linux
+RUN cd backend && npm rebuild bcrypt --build-from-source
+
 # Copy backend source code
 COPY backend/ ./backend/
-COPY tsconfig.json ./
 
 # Generate Prisma client
 WORKDIR /app/backend
@@ -27,7 +29,10 @@ RUN DATABASE_URL="postgresql://user:pass@localhost/db" npx prisma generate
 # Build backend
 RUN npm run build
 
-WORKDIR /app
+# Make entrypoint executable
+RUN chmod +x /app/backend/entrypoint.sh
+
+WORKDIR /app/backend
 EXPOSE 3000
 
-CMD ["node", "backend/dist/services/api-server.js"]
+ENTRYPOINT ["/bin/sh", "/app/backend/entrypoint.sh"]
