feat: add settings page and integrate AI provider configuration
- Created a new SettingsPage component for managing AI providers and model configurations.
- Integrated the SettingsPage into the DashboardPage, replacing the previous settings section.
- Implemented functionality to add, edit, and delete AI providers with validation.
- Added support for multiple languages in training phrases within the TrainingPage.
- Enhanced voice recording functionality with automatic detection of silence to stop recording.
- Introduced a new VoiceActivityDetector utility for managing voice activity detection.
- Added verification API for voice against enrolled speaker profiles.
- Defined types for AI settings and providers in a new ai-settings.ts file.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       - "5001:5001"
     volumes:
       - embedding_models:/app/models
+      - audio_data:/app/data/audio
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5001/health"]
       interval: 30s
@@ -61,6 +62,8 @@ services:
       EMBEDDING_SERVICE_PORT: 5001
     ports:
       - "3000:3000"
+    volumes:
+      - audio_data:/app/data/audio
     depends_on:
       postgres:
         condition: service_healthy
@@ -86,3 +89,4 @@ volumes:
   postgres_data:
   weaviate_data:
   embedding_models:
+  audio_data:
