--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -1,22 +1,37 @@
 # Backend Dockerfile
-FROM node:22-alpine
+FROM node:22-bookworm-slim
 
-# Install OpenSSL, Python, and build tools for Prisma and bcrypt
-RUN apk add --no-cache openssl ca-certificates python3 make g++
+# Install runtime dependencies (Python 3.12, build tools)
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    python3 \
+    python3-pip \
+    python3-dev \
+    build-essential \
+    libssl-dev \
+    libffi-dev \
+    ca-certificates \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
+
+# Copy requirements and install Python packages
+COPY backend/requirements.txt .
+RUN pip3 install --no-cache-dir --break-system-packages -r requirements.txt
+
+# Set PATH for Python packages
+ENV PATH=/usr/local/bin:$PATH
 
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
+# Install Node dependencies
 RUN npm install
 
-# Copy only backend dependencies
+# Copy backend files
 COPY backend/package*.json ./backend/
 RUN cd backend && npm install --production=false
 
-# Rebuild native modules for Alpine/Linux
+# Rebuild native modules for Debian/Linux
 RUN cd backend && npm rebuild bcrypt --build-from-source
 
 # Copy backend source code
@@ -29,10 +44,13 @@ RUN DATABASE_URL="postgresql://user:pass@localhost/db" npx prisma generate
 # Build backend
 RUN npm run build
 
+# Copy Python service file to dist (needed for embedding service)
+RUN cp /app/backend/services/embedding-service.py /app/backend/dist/services/embedding-service.py
+
 # Make entrypoint executable
 RUN chmod +x /app/backend/entrypoint.sh
 
 WORKDIR /app/backend
 EXPOSE 3000
 
-ENTRYPOINT ["/bin/sh", "/app/backend/entrypoint.sh"]
+ENTRYPOINT ["/bin/bash", "/app/backend/entrypoint.sh"]
