--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,7 @@
 torch==2.2.0
 torchaudio==2.2.0
 torchvision==0.17.0
-speechbrain==0.5.16
+speechbrain==1.0.3
 typing_extensions>=4.0.0
 
 # Flask API
@@ -19,20 +19,20 @@ blinker>=1.6.2
 
 # Audio processing
 librosa==0.10.0
-numpy==1.24.3
+numpy>=1.26.0
 scipy==1.11.4
 
 # Additional dependencies
 setuptools>=65.0.0
 wheel
 packaging
-PyYAML>=6.0
+PyYAML==6.0
 ruamel.yaml>=0.17.0
 joblib>=1.3.0
 matplotlib>=3.7.0
 pesq>=0.0.4
 pystoi>=0.3.3
-huggingface-hub>=0.16.0
+huggingface-hub==0.16.4
 httpx>=0.23.0
 filelock>=3.0.0
 fsspec>=2023.0.0
