--- a/docker/Dockerfile.embedding
+++ b/docker/Dockerfile.embedding
@@ -6,15 +6,17 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y \
     build-essential \
     libsndfile1 \
+    libsndfile1-dev \
     ffmpeg \
     curl \
+    git \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements
 COPY backend/requirements.txt .
 
-# Install Python dependencies
-RUN pip install --no-cache-dir --no-deps -r requirements.txt || pip install -r requirements.txt
+# Install Python dependencies with retry logic
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the embedding service
 COPY backend/services/embedding-service.py .
