--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.67.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
