feat: add Continuous Listening feature with context management and UI components
- Implement ContinuousListeningPanel component for user interaction.
- Create ContinuousListeningContext to manage WebSocket connection and state.
- Add ContinuousListeningSection in SettingsPage for configuration.
- Define types for continuous listening settings and WebSocket messages.
- Integrate audio processing for real-time voice activity detection and speaker identification.
- Implement settings update and wake word testing functionality.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       EMBEDDING_SERVICE_PORT: 5001
       MODEL_CACHE_DIR: /app/models
       HF_TOKEN: ${HF_TOKEN}
+      HF_HUB_OFFLINE: ${HF_HUB_OFFLINE:-0}
     ports:
       - "5001:5001"
     volumes:
