--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "openai": "^4.67.0"
+    "openai": "^4.67.0",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -27,6 +28,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
+    "@types/ws": "^8.18.1",
     "multer": "^1.4.5-lts.1",
     "prisma": "^5.18.0",
     "tsx": "^4.7.0",
