feat: Configure HuggingFace cache and update model capabilities
- Set environment variables for HuggingFace cache in download-model.py and embedding-service.py.
- Updated model capabilities in model-discovery.ts to include latest models from OpenAI, Mistral AI, Anthropic Claude, Google Gemini, Alibaba Qwen, Meta Llama, Cohere, Together AI, and Perplexity.
- Added ContinuousListeningCompact component for a minimal listening button in the UI.
- Refactored ContinuousListeningContext to use 'authToken' instead of 'token' for local storage.
- Enhanced DashboardPage and SettingsPage to integrate the new ContinuousListeningCompact component and favicon fetching functionality.
- Implemented favicon fetching utility in utils/favicon.ts to dynamically retrieve favicons for provider endpoints.
- Updated Dockerfile and docker-compose.yml to ensure proper environment setup for model caching.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
     environment:
       EMBEDDING_SERVICE_PORT: 5001
       MODEL_CACHE_DIR: /app/models
+      HF_HOME: /app/models
+      HF_HUB_CACHE: /app/models/hub
       HF_TOKEN: ${HF_TOKEN}
       HF_HUB_OFFLINE: ${HF_HUB_OFFLINE:-0}
     ports:
