--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,17 +23,13 @@ services:
       QUERY_DEFAULTS_LIMIT: 25
       AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: "true"
       PERSISTENCE_DATA_PATH: /var/lib/weaviate
-      DEFAULT_VECTORIZER_MODULE: text2vec-openai
-      OPENAI_APIKEY: ${OPENAI_API_KEY}
+      # Activer les modules sans API key globale - les clés seront passées via headers
+      ENABLE_MODULES: text2vec-openai
+      DEFAULT_VECTORIZER_MODULE: none
     ports:
       - "8080:8080"
     volumes:
       - weaviate_data:/var/lib/weaviate
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/v1/.well-known/ready"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
   backend:
     build:
