--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.67.0",
+    "onnxruntime-node": "^1.17.0",
     "ws": "^8.19.0"
   },
   "devDependencies": {
