--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -1,4 +1,25 @@
-# Backend Dockerfile
+# Backend + Frontend Dockerfile - Multi-stage build
+# Stage 1: Build frontend
+FROM node:22-alpine AS frontend-builder
+
+WORKDIR /app
+
+# Copy package files
+COPY package*.json ./
+
+# Install dependencies
+RUN npm install
+
+# Copy build config and source files
+COPY index.html vite.config.ts tsconfig.json tailwind.config.js components.json ./
+COPY src/ ./src/
+COPY frontend/ ./frontend/
+COPY config/ ./config/
+
+# Build the frontend
+RUN npm run build
+
+# Stage 2: Build backend
 FROM node:22-bookworm-slim
 
 # Install runtime dependencies (Python 3.12, build tools)
@@ -47,8 +68,14 @@ RUN npm run build
 # Copy Python service file to dist (needed for embedding service)
 RUN cp /app/backend/services/embedding-service.py /app/backend/dist/services/embedding-service.py
 
+# Copy frontend dist from builder
+COPY --from=frontend-builder /app/dist /app/dist
+
 # Make entrypoint executable
 RUN chmod +x /app/backend/entrypoint.sh
+
+# Set production environment
+ENV NODE_ENV=production
 
 WORKDIR /app/backend
 EXPOSE 3000
