feat: ajouter un service de sanitisation des résultats d'outils et un résumé d'exécution pour améliorer la sécurité des données

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,8 +106,9 @@ services:
     depends_on:
       - backend
     volumes:
-      - ./frontend:/app/frontend
-      - /app/frontend/node_modules
+      - ./src:/app/src
+      - ./index.html:/app/index.html
+      - /app/node_modules
     command: npm run dev -- --host 0.0.0.0
 
 volumes:
