feat: Implement user profile service for managing user data
- Added UserProfile interface and methods for getting, updating, merging, and deleting user profiles.
- Implemented profile formatting for LLM prompts.

feat: Create WebSocket broadcast service for real-time updates

- Developed WebSocketBroadcastService to manage user connections and broadcast messages.
- Added methods for sending task-related events to users.

feat: Introduce token validator utility for max_tokens handling

- Created utility to validate and adjust max_tokens based on model context windows.
- Implemented error detection for max_tokens errors and fallback strategies.

chore: Update Docker configurations for API URL injection

- Modified Dockerfile and docker-compose.yml to accept VITE_API_URL as a build argument.

docs: Add implementation notes for long running tasks and max tokens error handling

- Documented architecture, task lifecycle, API endpoints, and error handling strategies for long running tasks.
- Explained max tokens error handling implementation and fallback strategies.

--- a/docker/Dockerfile.frontend.prod
+++ b/docker/Dockerfile.frontend.prod
@@ -1,6 +1,9 @@
 # Frontend Production Dockerfile - Build stage
 FROM node:22-alpine AS builder
 
+# Accept API URL from build args
+ARG VITE_API_URL=http://localhost:3000
+
 WORKDIR /app
 
 # Copy package files
@@ -13,6 +16,9 @@ RUN npm install
 COPY index.html vite.config.ts tsconfig.json tailwind.config.js components.json ./
 COPY src/ ./src/
 COPY config/ ./config/
+
+# Set API URL from build arg for Vite to inject during build
+ENV VITE_API_URL=${VITE_API_URL}
 
 # Build the frontend
 RUN npm run build
