--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,23 @@
 # Frontend Configuration
-VITE_API_URL=http://localhost:3000
+VITE_API_URL=https://brain-api.thibautrey.fr
 
 # Backend Configuration
 NODE_ENV=development
 PORT=3000
 
 # Database Configuration
-DATABASE_URL=postgresql://user:password@localhost:5432/second_brain
-WEAVIATE_URL=http://localhost:8080
+DATABASE_URL=postgresql://secondbrain:dev_password@postgres:5432/second_brain
+DB_PASSWORD=dev_password
+WEAVIATE_URL=http://weaviate:8080
 
 # LLM Configuration
 OPENAI_API_KEY=sk-your-key-here
 OPENAI_BASE_URL=https://api.openai.com/v1
 LLM_MODEL=gpt-4-turbo
+
+# HuggingFace Configuration (optional, for offline model caching)
+HF_TOKEN=
+HF_HUB_OFFLINE=0
 
 # Memory Configuration
 MEMORY_RETENTION_DAYS=7
