--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,27 @@ services:
       timeout: 10s
       retries: 3
 
+  code-executor:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.code-executor
+    environment:
+      CODE_EXECUTOR_PORT: 5002
+      MAX_EXECUTION_TIME: 30
+      MAX_OUTPUT_SIZE: 10240
+      MAX_CODE_SIZE: 50000
+    ports:
+      - "5002:5002"
+    security_opt:
+      - no-new-privileges:true
+    cap_drop:
+      - ALL
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5002/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
   backend:
     build:
       context: .
@@ -81,6 +102,8 @@ services:
       PORT: 3000
       EMBEDDING_SERVICE_HOST: embedding-service
       EMBEDDING_SERVICE_PORT: 5001
+      CODE_EXECUTOR_HOST: code-executor
+      CODE_EXECUTOR_PORT: 5002
       AUDIO_TMP_DIR: /app/data/audio/tmp
     ports:
       - "3000:3000"
@@ -90,6 +113,8 @@ services:
       postgres:
         condition: service_healthy
       embedding-service:
+        condition: service_healthy
+      code-executor:
         condition: service_healthy
       weaviate:
         condition: service_healthy
