feat: add notification client and service for real-time notifications
- Implemented NotificationClient to manage WebSocket connections for real-time notifications.
- Added methods for connecting, disconnecting, sending messages, and handling notifications.
- Created notificationService to manage notifications via REST API, including creating, retrieving, and marking notifications as read.
- Updated Vite configuration to proxy API requests to the backend server.
- Modified TrainingPage component to handle error states more gracefully and adjusted class names for consistency.

--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,9 @@ backend/dist/
 backend/node_modules/
 
 # Frontend
-frontend/node_modules/
-frontend/dist/
+src/node_modules/
+src/dist/
+src/build/
 
 # Database
 *.db
