feat: ajouter la gestion des notifications en temps réel avec WebSocket et mise à jour des routes API

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Frontend Configuration
 VITE_API_URL=https://brain-api.thibautrey.fr
+VITE_WS_URL=wss://brain-api.thibautrey.fr
 
 # Backend Configuration
 NODE_ENV=development
