--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.29.0",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
+    "i18next-react": "^0.2.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "marked": "^17.0.1",
