--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
-    "i18next-react": "^0.2.2",
+    "react-i18next": "^16.0.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "marked": "^17.0.1",
