feat: Add unified setup scripts for quick installation and local LLM setup
- Introduced `setup.sh` for checking prerequisites, generating secrets, and setting up the environment.
- Added `setup-local-llm.sh` to install and configure Ollama for local AI features.
- Updated README.md to document new scripts and their functionalities.

feat: Implement onboarding wizard for new users

- Created `OnboardingWizard` component to guide users through initial setup.
- Added steps for AI configuration, notifications setup, and completion.
- Integrated onboarding steps with user authentication context to track completion status.

feat: Enhance AI configuration step in onboarding

- Developed `AIConfigStep` to allow users to add and test AI providers.
- Included validation and feedback for API key input and connection testing.

feat: Add notifications setup step in onboarding

- Implemented `NotificationsStep` to let users choose notification channels.
- Provided options for browser notifications, Pushover, and Telegram.

feat: Create completion step for onboarding

- Added `CompletionStep` to summarize setup and suggest next actions for users.

feat: Introduce progress bar for onboarding steps

- Created a reusable `Progress` component to visually indicate onboarding progress.

fix: Update AuthContext to manage onboarding completion state

- Modified user context to include onboarding completion status and timestamps.

--- a/docker/Dockerfile.embedding
+++ b/docker/Dockerfile.embedding
@@ -26,15 +26,24 @@ ENV MODEL_CACHE_DIR=/app/models
 ENV HF_HOME=/app/models
 ENV HF_HUB_CACHE=/app/models/hub
 
-# Copy the model download script
+# Copy the model download script and embedding service
 COPY backend/services/download-model.py .
-
-# Attempt to pre-download model (may fail without internet, that's OK)
-# We'll handle offline mode gracefully in the embedding service
-RUN python3 download-model.py || true
-
-# Copy the embedding service
 COPY backend/services/embedding-service.py .
+
+# Pre-download ECAPA-TDNN model during build (~150MB, cached in layers)
+# This eliminates runtime download delays
+RUN echo "📥 Pre-downloading ECAPA-TDNN model..." && \
+    python3 download-model.py && \
+    echo "✅ Model cached successfully" || \
+    (echo "⚠️  Model download failed, will retry at runtime" && true)
+
+# Verify model files exist or create empty marker for offline detection
+RUN if [ ! -f "/app/models/hub/models--speechbrain--spkrec-ecapa-voxceleb/snapshots/"*/hyperparams.yaml ]; then \
+        echo "Model not cached, will download at runtime" > /app/models/download_needed.txt; \
+    else \
+        echo "Model successfully cached during build" && \
+        ls -la /app/models/hub/; \
+    fi
 
 # Expose port
 EXPOSE 5001
