--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,6 +99,8 @@ services:
       DATABASE_URL: postgresql://secondbrain:${DB_PASSWORD:-dev_password}@postgres:5432/second_brain
       WEAVIATE_URL: http://weaviate:8080
       OPENAI_API_KEY: ${OPENAI_API_KEY}
+      JWT_SECRET: ${JWT_SECRET}
+      ENCRYPTION_KEY: ${ENCRYPTION_KEY}
       PORT: 3000
       EMBEDDING_SERVICE_HOST: embedding-service
       EMBEDDING_SERVICE_PORT: 5001
