--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # Frontend Configuration
 VITE_API_URL=https://brain-api.thibautrey.fr
 VITE_WS_URL=wss://brain-api.thibautrey.fr
+# Audio protocol: websocket, sse, or polling (defaults to sse in production for Cloudflare compatibility)
+# VITE_AUDIO_PROTOCOL=sse
 
 # Backend Configuration
 NODE_ENV=development
