feat: update WebSocket URL handling to derive from API URL and add NotificationInitializer component

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Frontend Configuration
+# VITE_API_URL is used as the single source of truth for backend connections
+# WebSocket URLs are derived from this (http: -> ws:, https: -> wss:)
 VITE_API_URL=https://brain-api.thibautrey.fr
-VITE_WS_URL=wss://brain-api.thibautrey.fr
 # Audio protocol: websocket, sse, or polling (defaults to sse in production for Cloudflare compatibility)
 # VITE_AUDIO_PROTOCOL=sse
 
