feat: add FRONTEND_URL for CORS configuration and update WebSocket middleware to support upgrades

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ VITE_API_URL=https://brain-api.thibautrey.fr
 # Backend Configuration
 NODE_ENV=development
 PORT=3000
+# FRONTEND_URL is used for CORS configuration and WebSocket origins
+# Should match the frontend domain/URL
+FRONTEND_URL=http://localhost:5173
 
 # Database Configuration
 DATABASE_URL=postgresql://secondbrain:dev_password@postgres:5432/second_brain
