--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "multer": "^1.4.5-lts.1",
     "prisma": "^5.18.0",
     "tsx": "^4.7.0",
-    "typescript": "~5.7.2"
+    "typescript": "~5.7.2",
+    "vitest": "^1.0.0"
   }
 }
