--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: postgres:15-alpine
     environment:
       POSTGRES_USER: secondbrain
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-dev_password}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: second_brain
     #    ports:
     #      - "5432:5432"
@@ -130,7 +130,7 @@ services:
       dockerfile: docker/Dockerfile.backend
     environment:
       NODE_ENV: development
-      DATABASE_URL: postgresql://secondbrain:${DB_PASSWORD:-dev_password}@postgres:5432/second_brain
+      DATABASE_URL: postgresql://secondbrain:${DB_PASSWORD}@postgres:5432/second_brain
       WEAVIATE_URL: http://weaviate:8080
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       JWT_SECRET: ${JWT_SECRET}
